--- a/project.yml
+++ b/project.yml
@@ -80,7 +80,8 @@
     - vendor/ceedling/plugins
   :enabled:
     - stdout_pretty_tests_report
-    - gcov
     - module_generator
+    - gcov
+    - stdout_gtestlike_tests_report
     - xml_tests_report
 ...
